--- a/gasscan/app/build.gradle
+++ b/gasscan/app/build.gradle
@@ -23,4 +23,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    //Firebase analytics
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    //Firebase database
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    //Firebase auth
+    compile 'com.google.firebase:firebase-auth:9.4.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
