--- a/gasscanmk1/app/build.gradle
+++ b/gasscanmk1/app/build.gradle
@@ -12,6 +12,9 @@ android {
         versionName "1.0"
     }
     buildTypes {
+        debug{
+            debuggable true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -24,7 +27,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
     //compile 'com.android.support:appcompat-v7:21.0.3'  //thought was necessary for drawer, but not.
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
@@ -36,14 +39,19 @@ dependencies {
 
     //Google
     compile 'com.google.android.gms:play-services-auth:9.4.0'
-    compile 'com.google.android.gms:play-services-auth:9.4.0'
+
 
     //Other
-    compile 'com.android.support:design:24.2.0'   //used for snackbar
+    compile 'com.android.support:design:24.2.1'   //used for snackbar
    // androidTestCompile 'com.android.support.test:runner:0.5'
     //androidTestCompile 'com.android.support.test:rules:0.5'
     //androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     //androidTestCompile 'com.android.support:support-annotations:24.2.0'
+
+    //For google vision
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.google.android.gms:play-services-vision:9.4.0'
 }
 
 //For google services & firebase:
