--- a/gasscanmk1/app/src/main/AndroidManifest.xml
+++ b/gasscanmk1/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:debuggable="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,7 +23,20 @@
         </activity>
         <activity
             android:name=".SignInActivity"
-            android:label="@string/title_activity_sign_in"></activity>
+            android:label="@string/title_activity_sign_in">
+        </activity>
+
+        <activity
+            android:name=".OcrCaptureActivity"
+            android:label="@string/title_activity_ocr"><!-- com.google.android.gms.samples.vision.ocrreader.OcrCaptureActivity-->
+            <!-- android:label="Read Text">
+             <intent-filter>
+                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
+        </activity>
+
+
     </application>
 
 </manifest>
