--- a/gasscanmk1/app/build.gradle
+++ b/gasscanmk1/app/build.gradle
@@ -1,34 +1,54 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    signingConfigs {
+        config {
+            keyAlias 'GasScanKey'
+            keyPassword 'android'
+            storeFile file('C:/Users/Taylor.coomer/Documents/GitHub/gasscan/gasscanmk1/keystores/android.jks')
+            storePassword 'android'
+        }
+    }
+    compileSdkVersion 23
     buildToolsVersion "24.0.2"
-
     defaultConfig {
         applicationId "taylorandtanner.gasscanmk1"
         minSdkVersion 14
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        signingConfig signingConfigs.config
     }
     buildTypes {
-        debug{
+        debug {
             debuggable true
+            signingConfig signingConfigs.config
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+            signingConfig signingConfigs.config
         }
     }
-
-
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
     //compile 'com.android.support:appcompat-v7:21.0.3'  //thought was necessary for drawer, but not.
+    //Google
+    //Other
+    //used for snackbar
+    // androidTestCompile 'com.android.support.test:runner:0.5'
+    //androidTestCompile 'com.android.support.test:rules:0.5'
+    //androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+    //androidTestCompile 'com.android.support:support-annotations:24.2.0'
+    //For google vision
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-storage:9.4.0'
@@ -36,21 +56,9 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.4.0'
     compile 'com.google.firebase:firebase-config:9.4.0'
     compile 'com.google.firebase:firebase-invites:9.4.0'
-
-    //Google
     compile 'com.google.android.gms:play-services-auth:9.4.0'
-
-
-    //Other
-    compile 'com.android.support:design:24.2.1'   //used for snackbar
-   // androidTestCompile 'com.android.support.test:runner:0.5'
-    //androidTestCompile 'com.android.support.test:rules:0.5'
-    //androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-    //androidTestCompile 'com.android.support:support-annotations:24.2.0'
-
-    //For google vision
-    compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
     compile 'com.google.android.gms:play-services-vision:9.4.0'
 }
 
