Merge: Fixed Menus, Added Still Image Select Option
# Conflicts:
#	gasscanmk1/app/src/main/java/taylorandtanner/gasscanmk1/Settings.java
#	gasscanmk1/app/src/main/res/layout/activity_settings.xml

--- a/gasscanmk1/app/build.gradle
+++ b/gasscanmk1/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'GasScanKey'
             keyPassword 'android'
-            storeFile file('F:/AndroidStudioProjects/gasscan/gasscanmk1/keystores/android.jks')
+            storeFile file('C:/Users/Taylor.coomer/Documents/GitHub/gasscan/gasscanmk1/keystores/android.jks')
             storePassword 'android'
         }
     }
