--- a/gasscanmk1/app/build.gradle
+++ b/gasscanmk1/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.google.android.gms:play-services-vision:9.4.0'
+    compile 'com.google.android.gms:play-services-appindexing:9.4.0'
 }
 
 //For google services & firebase:
