--- a/gasscanmk1/app/src/main/AndroidManifest.xml
+++ b/gasscanmk1/app/src/main/AndroidManifest.xml
@@ -44,11 +44,7 @@
         <activity
             android:name=".ImageSelect"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ReceiptForm"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+        <activity android:name=".receiptForm"></activity>
     </application>
 
 </manifest>
